clean more files

--- a/cleaned/14.html
+++ b/cleaned/14.html
@@ -185,14 +185,15 @@
           <a href="http://www.finnland.de/public/default.aspx?contentid=356582&nodeid=37052&culture=de-DEwww.finnland.de/public/default.aspx?contentid=356582&nodeid=37052&culture=de-DE"><img src="resources/_wsb_123x105_suomifinland100-tunnus_sininen_rgb.jpg"></a>
           <h2>VOCAL FOLK HOP AUS FINNLAND</h2>
 
+          <figure>
           <img src="resources/_wsb_460x307_Tuuletar1+$C2$A9Maria+Baranova_web.jpg">
 
-          <p>
+          <figcaption>
           Johanna Kyykoski<br>
           Piia Säilynoja<br>
           Venla IlonaBlom<br>
           Sini Koskelainen
-          </p>
+          </figcaption>
 
           <h1>Am 5. Mai 2017 um 19.30 Uhr</h1>
 
