--- a/cleaned/18.html
+++ b/cleaned/18.html
@@ -181,69 +181,23 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table width="520">
-            <tbody>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr align="center">
-                <td valign="top">
-                  <img width="496" height="356" border="0" src="resources/_wsb_496x356_branimir+ausstellung4reduziert.jpg">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table width="518">
-            <tbody>
-              <tr>
-                <td valign="top">
-                  <a href="http://www.brageo.de"><b>Branimir Georgiev: www</b></a><a href="http://www.brageo.de"><b>.brageo.de</b></a> Branimir Georgiev, ausgebildeter Grafiker, Maler und Kunstpädagoge aus Bulgarien, zeigt im Foyer und im Flur des Kulturhauses Süderelbe Malereien in Acryl und Öl, Skizzen und Zeichnungen. Die Schirmherrschaft dieser Ausstellung hat der Honorargeneralkonsul der Republik Bulgarien, Prof. Dr. Gerd-Winand Imeyer, übernommen, der auch die einleitenden Worte spricht. Licht und seine Reflexionen, das ist das Faszinierende an den ausgestellten Werken. In vielen Skizzen hat sich Branimir Georgiev diesem Thema angenähert und sie in Malereien umgesetzt. Am Donnerstag, den 5. September, ist der Künstler anwesend und steht für Fragen zur Verfügung.
-                </td>
-              </tr>
-              <tr align="center">
-                <td>
-                  <img width="373" height="280" border="0" src="resources/_wsb_373x280_Wilhelmsburg_am+Kanal+reduziert.jpg">
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  Wilhelmsburg am Kanal
-                </td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  <img width="371" height="279" border="0" src="resources/_wsb_371x279_Ernst-August-Schleuse+reduziert.jpg">
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  Ernst-August-Schleuse
-                </td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  <img width="444" height="216" border="0" src="resources/_wsb_444x216_handykids-2+reduziert.jpg">
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  Handykids
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <img src="resources/_wsb_496x356_branimir+ausstellung4reduziert.jpg">
+          <p>Branimir Georgiev: <a href="http://www.brageo.de">www.brageo.de</a></p>
+
+          <p>Branimir Georgiev, ausgebildeter Grafiker, Maler und Kunstpädagoge aus Bulgarien, zeigt im Foyer und im Flur des Kulturhauses Süderelbe Malereien in Acryl und Öl, Skizzen und Zeichnungen. Die Schirmherrschaft dieser Ausstellung hat der Honorargeneralkonsul der Republik Bulgarien, Prof. Dr. Gerd-Winand Imeyer, übernommen, der auch die einleitenden Worte spricht. Licht und seine Reflexionen, das ist das Faszinierende an den ausgestellten Werken. In vielen Skizzen hat sich Branimir Georgiev diesem Thema angenähert und sie in Malereien umgesetzt.</p>
+          <p>Am Donnerstag, den 5. September, ist der Künstler anwesend und steht für Fragen zur Verfügung.</p>
+
+          <figure>
+          <img src="resources/_wsb_373x280_Wilhelmsburg_am+Kanal+reduziert.jpg">
+          <figcaption>Wilhelmsburg am Kanal</figcaption>
+          </figure>
+
+          <figure>
+          <img src="resources/_wsb_371x279_Ernst-August-Schleuse+reduziert.jpg">
+          <figcaptiom>Ernst-August-Schleuse</figcaptiom>
+          <figure>
+          <img src="resources/_wsb_444x216_handykids-2+reduziert.jpg">
+          <figcaption>Handykids</figcaption>
         </td>
       </tr>
     </table>
