--- a/cleaned/19.html
+++ b/cleaned/19.html
@@ -80,33 +80,41 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table width="514">
-            <tbody>
-              <tr>
-                <td valign="top">
-                  <h3>
-                    Süderelbe-Archiv in der Bücherhalle Neugraben
-                  </h3>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Das Süderelbe-Archiv / Geschichtswerkstatt in der Bücherhalle Neugraben ist eine Arbeitsgruppe des Kulturhauses Süderelbe. Die Bestände sind während der Öffnungszeiten der Bücherhalle einsehbar, eine Kopiermöglichkeit ist vorhanden. <a title="Bücherhalle Neugraben" href="http://www.buecherhallen.de/neugraben">Für die Öffnungszeiten der Bücherhalle klicken Sie bitte hier</a>. Die AG trifft sich einmal im Monat donnerstags um 19:30 Uhr in der Bücherhalle Neugraben. Bei Interesse kontaktieren Sie uns bitte über die neue E-Mail-Adresse des Süderelbe-Archivs: "info@suederelbe-archiv.de" - vielen Dank! <b>Termine der Arbeitsgruppentreffen in der Bücherhalle Neugraben in 2017:</b> 8. Juni, 13. Juli, 14. September 2017. Neue Teilnehmer sind herzlich willkommen! <b>Kontakt</b>: Matthias Pfeifer (Bücherhalle Neugraben), Tel. 701 76 22 Stephan Kaiser (Kulturhaus Süderelbe), Tel. 0179-28 24 625. <b>Offener Treffpunkt:</b> Mitglieder der Arbeitsgruppe stehen 2017 an folgenden Sonnabenden in der Zeit von 10:00-12:00 Uhr zum Kennenlernen des Archivs zur Verfügung: 3. Juni, 1. Juli. <b>Themenabende:</b> Wir verweisen auf die Informationen auf unserer Internet-Präsenz: <a target="_blank" href="http://www.suederelbe-archiv.de">www.suederelbe-archiv.de</a>. <b>Stadtteilrundgänge:</b>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table width="468">
-            <tbody>
-              <tr>
-                <td valign="top">
-                  <p>
-                    Die aktuellen Termine für 2017 finden Sie auf: <a target="_blank" href="http://www.suederelbe-archiv.de">www.suederelbe-archiv.de</a>.
-                  </p>________________________________________________________________________
-                </td>
-              </tr>
-            </tbody>
-          </table>
+            <h1>
+              Süderelbe-Archiv in der Bücherhalle Neugraben
+            </h1>
+            <p>Das Süderelbe-Archiv / Geschichtswerkstatt in der Bücherhalle Neugraben ist eine Arbeitsgruppe des Kulturhauses Süderelbe.</p>
+            <p>Die Bestände sind während der Öffnungszeiten der Bücherhalle einsehbar, eine Kopiermöglichkeit ist vorhanden. <a title="Bücherhalle Neugraben" href="http://www.buecherhallen.de/neugraben">Für die Öffnungszeiten der Bücherhalle klicken Sie bitte hier</a>.</p>
+            <p>Die AG trifft sich einmal im Monat donnerstags um 19:30 Uhr in der Bücherhalle Neugraben.</p>
+            <p>Bei Interesse kontaktieren Sie uns bitte über die neue E-Mail-Adresse des Süderelbe-Archivs: <a href="mailto:info@suederelbe-archiv.de">info@suederelbe-archiv.de</a> - vielen Dank!</p>
+
+            <h2>Termine der Arbeitsgruppentreffen in der Bücherhalle Neugraben in 2017</h2>
+            <ul>
+            <li>8. Juni 2017</li>
+            <li>13. Juli 2017</li>
+            <li>14. September 2017</li>
+            </ul>
+
+            <p>Neue Teilnehmer sind herzlich willkommen!</p>
+
+            <h2>Kontakt</h2>
+
+            <p>Matthias Pfeifer (Bücherhalle Neugraben), Tel. 701 76 22</br>
+            Stephan Kaiser (Kulturhaus Süderelbe), Tel. 0179-28 24 625.</p>
+
+            <2>Offener Treffpunkt</h2>
+            <p>Mitglieder der Arbeitsgruppe stehen 2017 an folgenden Sonnabenden in der Zeit von 10:00-12:00 Uhr zum Kennenlernen des Archivs zur Verfügung:</p>
+
+            <ul>
+            <li>3. Juni</li>
+            <li>1. Juli</li>
+            </ul>
+
+            <h2>Themenabende</h2>
+            <p>Wir verweisen auf die Informationen auf unserer Internet-Präsenz: <a target="_blank" href="http://www.suederelbe-archiv.de">www.suederelbe-archiv.de</a>.</p>
+
+            <h2>Stadtteilrundgänge:</h2>
+            <p>Die aktuellen Termine für 2017 finden Sie auf: <a target="_blank" href="http://www.suederelbe-archiv.de">www.suederelbe-archiv.de</a>.</p>
         </td>
       </tr>
     </table>
