--- a/cleaned/20.html
+++ b/cleaned/20.html
@@ -80,44 +80,46 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
+          <h1>
             Literaturcafe im Striepensaal
-          </h3>
-          <p>
-            <b>Immer am ersten Sonntag im Monat</b>
+          </h1>
+          <p><b>Immer am ersten Sonntag im Monat<br>
+          liest Dieter Wehrbrink aus Werken der Literatur<br>
+          von 16 bis ca. 18 Uhr</b>
           </p>
           <p>
-            <b>liest Dieter Wehrbrink aus Werken der Literatur</b>
-          </p>
-          <p>
-            <b>von 16 bis ca. 18 Uhr</b>
-          </p>
-          <p>
-            <b>im Striepensaal</b>
-          </p>
-          <p>
-            Striepenweg 40 21147 Hamburg
-          </p>
-          <p>
+            <b>im Striepensaal</b><br>
+            Striepenweg 40 21147 Hamburg<br>
             (S3, Haltestelle "Neuwiedenthal", Ausgang Nord)
           </p>
           <p>
             Die Themen werden in der Presse und auf unserer Homepage bekannt gegeben.
           </p>
           <p>
-            <a href="http://www.hamburg1.de/sendungen/18/4575/Gymnasium_Finkenwerder_zeigt_Courage_Literaturcafe_im_Striepensaal.html"><b>hamburg1: TV-Sendung am 03. Mai 16 "Literaturcafe im Striepensaal" (Min. 8.38)</b></a>
-          </p><b>Am Sonntag, den 2. Juli 2017 um 16 Uhr liest Dieter Wehrbrink gemeinsam mit Gunter Miedeck aus dem Buch von Elizabeth George</b> <b>Vergiss nie, dass ich dich liebe</b>
-          <table width="428">
-            <tbody>
-              <tr>
-                <td></td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table><b><img src="resources/_wsb_294x137_maxresdefault.jpg" height="137" width="294" border="0"> Herzlich willkommen, der Eintritt ist frei!</b> Kontakt: Dieter Wehrbrink, Telefon 040 702 55 06 oder Kulturhaus Süderelbe, Telefon 040 796 72 22
-          <h3>
-            <img src="resources/_wsb_217x24_Logo_Striepensaal+geschnitten.JPG" height="225" width="2303" border="0">
-          </h3><img src="resources/_wsb_280x141_Striepensaal+WEB.jpg" height="141" width="280" border="0"><img src="resources/_wsb_161x133_Striepensaal+II+WEB.jpg" height="133" width="161" border="0"> Quelle: Programmflyer 2013 Striepensaal
+            <a href="http://www.hamburg1.de/sendungen/18/4575/Gymnasium_Finkenwerder_zeigt_Courage_Literaturcafe_im_Striepensaal.html">hamburg1: TV-Sendung am 03. Mai 16 "Literaturcafe im Striepensaal" (Min. 8.38)</a>
+          </p>
+
+          <h2>Am Sonntag, den 2. Juli 2017 um 16 Uhr</h2>
+
+          <p>liest Dieter Wehrbrink gemeinsam mit Gunter Miedeck aus dem Buch von</p>
+
+          <h4>Elizabeth George</h4>
+          <h3>Vergiss nie, dass ich dich liebe</h3>
+
+          <img src="resources/_wsb_294x137_maxresdefault.jpg">
+
+          <p><b>Herzlich willkommen, der Eintritt ist frei!</b></p>
+
+          <h2>Kontakt</h2>
+          <p>Dieter Wehrbrink, Telefon 040 702 55 06<br>
+          Kulturhaus Süderelbe, Telefon 040 796 72 22</p>
+
+          <figure>
+            <img src="resources/_wsb_217x24_Logo_Striepensaal+geschnitten.JPG">
+            <img src="resources/_wsb_280x141_Striepensaal+WEB.jpg">
+            <img src="resources/_wsb_161x133_Striepensaal+II+WEB.jpg">
+          <figcaption>Quelle: Programmflyer 2013 Striepensaal</figcaption>
+          </figure>
         </td>
       </tr>
     </table>
