--- a/cleaned/21.html
+++ b/cleaned/21.html
@@ -181,35 +181,14 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table width="517">
-            <tbody>
-              <tr>
-                <td valign="top">
-                  <h3>
-                    KulturDialog
-                  </h3>
-                  <h3>
-                    am 13. Mai 14 um 19.00 Uhr
-                  </h3>
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  Am Dienstag, den 13. Mai, findet im Kulturhaus Süderelbe eine Veranstaltung statt, die in Neugraben ein absolutes Novum ist - der "KulturDialog", initiiert von Stadtkultur e.V. , dem Dachverband alle achtundzwanzig Stadtteilkulturzentren Hamburgs, zu denen auch unser Kulturhaus gehört. In lockerer Diskussionsrunde sitzen Vertreter der stadtteilkulturellen Zentren aus dem Harburger Raum (von Alles wird schön aus Heimfeld, der KulturWerkstatt Harburg, dem Rieckhof und, natürlich, vom Kulturhaus Süderelbe), die kulturpolitischen Sprecher aller Fraktionen und freie Kulturschaffende aus Harburg, verbunden über den Verbund "Südkultur", zusammen. Das Thema des Abends lautet: "Kultur für alle - eine gesellschaftliche und politische verpflichtung!?"
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  <b>Alle sind eingeladen und wir freuen uns auf eine lebendige Diskussionsrunde!</b>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_510x713_Plakat+Kulturdialoge.jpg" width="510" height="713" border="0">
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <h1>KulturDialog</h1>
+          <h2>am 13. Mai 14 um 19.00 Uhr</h2>
+
+          <p>Am Dienstag, den 13. Mai, findet im Kulturhaus Süderelbe eine Veranstaltung statt, die in Neugraben ein absolutes Novum ist - der "KulturDialog", initiiert von Stadtkultur e.V. , dem Dachverband alle achtundzwanzig Stadtteilkulturzentren Hamburgs, zu denen auch unser Kulturhaus gehört.</p>
+          <p>In lockerer Diskussionsrunde sitzen Vertreter der stadtteilkulturellen Zentren aus dem Harburger Raum (von Alles wird schön aus Heimfeld, der KulturWerkstatt Harburg, dem Rieckhof und, natürlich, vom Kulturhaus Süderelbe), die kulturpolitischen Sprecher aller Fraktionen und freie Kulturschaffende aus Harburg, verbunden über den Verbund "Südkultur", zusammen.</p>
+          <p>Das Thema des Abends lautet: "Kultur für alle - eine gesellschaftliche und politische verpflichtung!?"</p>
+          <p><b>Alle sind eingeladen und wir freuen uns auf eine lebendige Diskussionsrunde!</b></p>
+          <img src="resources/_wsb_510x713_Plakat+Kulturdialoge.jpg">
         </td>
       </tr>
     </table>
